[package]
name = "openmeters"
version = "0.1.0"
edition = "2024"

[dependencies]
pipewire = "0.9.2"
spa = "0.5.1"
anyhow = "1.0"
parking_lot = "0.12"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
iced = { version = "0.13.1", features = ["advanced", "wgpu"] }
iced_widget = "0.13.4"
wgpu = { version = "27.0", features = ["wgsl"] }
async-channel = "2.5"
bytemuck = { version = "1.24", features = ["derive"] }
iced_wgpu = "0.13.5"
rustc-hash = "2.1"
rustfft = "6.4"
realfft = "3.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
ebur128 = "0.1"

[profile.dev]
opt-level = 3
