[package]
name = "openmeters"
version = "0.1.0"
edition = "2024"

[dependencies]
pipewire = "0.9.2"
spa = "0.5.1"
anyhow = "1.0.100"
parking_lot = "0.12.5"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
iced = { version = "0.14.0", features = ["advanced", "wgpu"] }
iced_widget = "0.14.0"
wgpu = { version = "27.0.1", features = ["wgsl"] }
async-channel = "2.5"
bytemuck = { version = "1.24", features = ["derive"] }
iced_wgpu = "0.14.0"
rustc-hash = "2.1.1"
rustfft = "6.4.1"
realfft = "3.5"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
wide = "1.0.2"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[dev-dependencies]
ebur128 = "0.1.10"

[profile.dev]
opt-level = 3

[profile.release]
lto = "thin"